# zk-gas-model

./: .gitignore  Cargo.toml  analyze.py  requirements.txt  rust-toolchain.toml  setup.sh
bytecode-scanner/: .gitignore  Cargo.toml
bytecode-scanner/.sqlx/: query-7f63e1aa8944a74580d15afaed9d8dd67fbdd707147f64e9c39cae2709dd1d76.json  query-c41ff61eaa674e32955877eb8e1b15220c6330fb981d9b8c2f82beb166c17b2f.json
bytecode-scanner/migrations/: 20250617093147_init.sql
bytecode-scanner/src/: init.rs  main.rs  scanner.rs
guest/: Cargo.toml
guest/src/: lib.rs  main.rs
jumpdest-analyze-guest/: Cargo.toml
jumpdest-analyze-guest/src/: main.rs
runner/: Cargo.toml  build.rs
runner/.sqlx/: query-58214bd5b2ff3246f7bb466a5697487f8b4e33cf313a9aa698c9b8b19da0556b.json
runner/src/: main.rs  runner.rs
runner/src/commands/: jumpdest.rs  mod.rs  opcodes.rs  precompile.rs  runner.rs
scripts/: analyze-dynamic.py  analyze-simple.py  plot-dynamic.py  plot-simple.py  process.py
test-vector/: Cargo.toml
test-vector/src/: constant-opcode-lut.json  counting.rs  lib.rs  lut.json  opcode-lut.json  precompile-lut.json
test-vector/src/filler/: arithmetic.rs  bitwise.rs  block_info.rs  contract.rs  control.rs  host.rs  memory.rs  mod.rs  precompile.rs  stack.rs  system.rs  tx_info.rs
