[workspace]
members = [
  "guest",
  "runner",
  "test-vector",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# sp1 dependencies
sp1-build = "4.2"
sp1-sdk = "4.2"
sp1-zkvm = "4.2"

csv = "1.3"
indicatif = "0.17"
itertools = "0.14"
rand = "0.9"
rand_xoshiro = "0.7"
rayon = "1.10"
#revm = { version = "24.0", default-features = false, features = ["serde"] }
revm-bytecode = { version = "4.0", default-features = false, features = ["serde"] }
revm-context = { version = "5.0", default-features = false }
revm-database = { version = "4.0", default-features = false }
revm-interpreter = { version = "20.0", default-features = false, features = ["serde"] }
revm-primitives = { version = "19.1", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.test]
lto = true
opt-level = 3

[profile.release]
lto = true
