[package]
edition = "2021"
name = "evm-guest"
version = "0.1.0"

[dependencies]
revm-bytecode.workspace = true
revm-context.workspace = true
revm-database.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true
revm-handler.workspace = true
serde.workspace = true

sp1-zkvm = { workspace = true, optional = true }

[features]
default = ["guest"]
guest = ["dep:sp1-zkvm"]
parse = ["revm-bytecode/parse"]
rand = ["revm-primitives/rand"]
