[package]
edition.workspace = true
license.workspace = true
name = "runner"
version.workspace = true

[dependencies]
indicatif.workspace = true
csv.workspace = true
evm-guest = { path = "../guest", default-features = false }
rand.workspace = true
rand_xoshiro.workspace = true
rayon.workspace = true
revm-bytecode.workspace = true
revm-interpreter.workspace = true
revm-primitives.workspace = true
sp1-sdk.workspace = true
test-vector = { path = "../test-vector" }
serde.workspace = true
itertools.workspace = true

[build-dependencies]
sp1-build.workspace = true
