[package]
edition.workspace = true
license.workspace = true
name = "test-vector"
version.workspace = true

[dependencies]
clap.workspace = true
evm-guest = { path = "../guest", default-features = false }
itertools.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
revm-bytecode = { workspace = true, features = ["parse"] }
revm-context.workspace = true
revm-database.workspace = true
revm-state.workspace = true
revm-interpreter.workspace = true
revm-primitives = { workspace = true, features = ["rand"] }
serde_json.workspace = true
serde.workspace = true
revm-precompile.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
revm-inspector.workspace = true

[dev-dependencies]
rayon.workspace = true
revm-handler.workspace = true
